[gd_scene load_steps=2 format=3 uid="uid://h84qg1mbpfq2"]

[ext_resource type="Script" path="res://gui/ActionEffect Panel.gd" id="1_h1ddw"]

[node name="ActionEffect Panel" type="Control"]
layout_mode = 3
anchor_left = 0.5
anchor_top = 0.931
anchor_right = 0.5
anchor_bottom = 0.931
offset_left = -576.0
offset_top = -603.288
offset_right = 576.0
offset_bottom = 44.712
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h1ddw")

[node name="Panel" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 205.0
offset_top = 558.0
offset_right = 533.0
offset_bottom = 594.0
scale = Vector2(2.34207, 2.35247)
alignment = 1

[node name="Calculator Button" type="Button" parent="Panel"]
layout_mode = 2
text = "Calculator"

[node name="Monitor Button" type="Button" parent="Panel"]
layout_mode = 2
text = "Monitor"

[node name="Ruler Button" type="Button" parent="Panel"]
layout_mode = 2
text = "Ruler"

[node name="Slides Button" type="Button" parent="Panel"]
layout_mode = 2
text = "Slides"

[node name="Study Button" type="Button" parent="Panel"]
layout_mode = 2
text = "Study
"

[node name="Clear Button" type="Button" parent="Panel"]
layout_mode = 2
text = "Clear
"

[connection signal="pressed" from="Panel/Calculator Button" to="." method="_on_calculator_button_pressed"]
[connection signal="pressed" from="Panel/Monitor Button" to="." method="_on_monitor_button_pressed"]
[connection signal="pressed" from="Panel/Ruler Button" to="." method="_on_ruler_button_pressed"]
[connection signal="pressed" from="Panel/Slides Button" to="." method="_on_slides_button_pressed"]
[connection signal="pressed" from="Panel/Study Button" to="." method="_on_study_button_pressed"]
[connection signal="pressed" from="Panel/Clear Button" to="." method="_on_clear_button_pressed"]
